--- a/final_project/style.css
+++ b/final_project/style.css
@@ -29,21 +29,20 @@ body{
   text-align:center;
   margin: 50
 }
-.sphere{
+.sphere {
   height: 200px;
-width: 200px;
-border-radius: 50%;
-text-align: center;
-vertical-align: middle;
-font-size: 250%;
-position: relative;
-box-shadow: inset -10px -10px 80px #000, 10px 10px 20px black, inset 0px 0px 10px black;
-display: inline-block;
-margin: 0 auto;  
-padding: 0px;
-background: #FFA928;
-color: rgb(112, 10, 10);
-}
+  width: 200px;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 250%;
+  position: relative;
+  box-shadow: inset -10px -10px 80px #000, 10px 10px 20px black, inset 0px 0px 10px black;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 0px;
+  background: #FFA928;
+  colo
 
 .pill-color-red{
   background-color: red;
